--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "stancl/tenancy": "^3.5"
+        "stancl/tenancy": "^3.5",
+        "infyomlabs/laravel-generator": "^4.0",
+        "infyomlabs/adminlte-templates": "^4.0",
+        "doctrine/dbal": "~2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
