--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "doctrine/dbal": "~2.3",
         "guzzlehttp/guzzle": "^7.2",
+        "infyomlabs/adminlte-templates": "^4.0",
+        "infyomlabs/laravel-generator": "^4.0",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "stancl/tenancy": "^3.5",
-        "infyomlabs/laravel-generator": "^4.0",
-        "infyomlabs/adminlte-templates": "^4.0",
-        "doctrine/dbal": "~2.3"
+        "spatie/laravel-permission": "^5.5",
+        "stancl/tenancy": "^3.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
