--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "laravel/socialite": "^5.2",
         "spatie/laravel-permission": "^5.5",
         "stancl/tenancy": "^3.5"
     },
