--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Gpcm17Iw1PwpSNreHZId0AJZ4QsmJ9fYaUW+ax6u1Mg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -12,7 +12,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=tenancy
-DB_USERNAME=
+DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -52,8 +52,8 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-
 FACEBOOK_CLIENT_ID=
 FACEBOOK_CLIENT_SECRET=
+
+GOOGLE_CLIENT_ID=871774922166-d6gkkf34o2reds4cmfq2dmbd1d7a45a2.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
