--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,22 +6,22 @@ services:
             context: .
             dockerfile: .docker/app/Dockerfile
         image: 'shouts.dev/laravel'
-        container_name: park-app
+        container_name: atar-app
         ports:
             - "8002:80"
         volumes:
             - ./:/var/www/html
         networks:
-            - park-network
+            - atar-network
         depends_on:
             - mysql
     mysql:
         image: mysql
-        container_name: park-db
+        container_name: atar-db
         restart: unless-stopped
         tty: true
         ports:
-            - "3307:3306"
+            - "3308:3306"
         environment:
             MYSQL_DATABASE: ${DB_DATABASE}
             MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
@@ -31,8 +31,8 @@ services:
         volumes:
             - ./.docker/mysql:/var/lib/mysql
         networks:
-            - park-network
+            - atar-network
 
 networks:
-    park-network:
+    atar-network:
         driver: bridge
